hphp/test/quick/hh_typehint4.php.expectf
HipHop Fatal error: Argument 1 passed to foo() must be of type ?array, stdClass given in %s on line 3
